--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +20,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Metrics Web App</title>
+    <meta name="title" property="og:title" content="Metrics Web App">
+    <meta property="og:type" content="Article">
+    <meta name="image" property="og:image" content="../app_screenshot.png">
+    <meta name="description" property="og:description" content="This educational project is to build a mobile web application to check a list of metrics (numeric values) using React and Redux. Built with React, Redux Toolkit, API, Sass and JavaScript.">
+    <meta name="author" content="Mavericks Balitaan">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
