--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Metrics Web App</title>
-    <meta name="title" property="og:title" content="Metrics Web App">
+    <title>Pokemon Web App</title>
+    <meta name="title" property="og:title" content="Pokemon Web App">
     <meta property="og:type" content="Article">
     <meta name="image" property="og:image" content="../app_screenshot.png">
     <meta name="description" property="og:description" content="This educational project is to build a mobile web application to check a list of metrics (numeric values) using React and Redux. Built with React, Redux Toolkit, API, Sass and JavaScript.">
